tests/NormalTests/paczka1/fuzzy1/71476502.err
Error in line 2: f1f1OW12qb7 S902 23,2
Error in line 7: T2TGGS A802 46,7
Error in line 8: m1dMHtl1Q A964 23,5
Error in line 15: f1f1OW12qb7 A107 82,8
Error in line 27: m1dMHtl1Q A107 13,5
Error in line 20: PgHR27shZk A964 1,5
Error in line 19: f1f1OW12qb7 A802 66,9
